@@ -17,10 +17,11 @@ public class ProductService {
     private final ProductRepository productRepository;
 
     public List<ProductResponse> getSellingProducts() {
-        List<Product> products = productRepository.findAllByProductSellingTypeIn(ProductSellingStatus.forDisplay());
+        List<Product> products = productRepository.findAllBySellingStatusIn(ProductSellingStatus.forDisplay());
+
         return products.stream()
                 .map(ProductResponse::of)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
